View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025892 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-03-05 06:35 | 2015-05-14 16:30 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025892: Wrong result obtained by projection algorithm. | ||||
Description | Wrong result obtained by projection algorithm. | ||||
Steps To Reproduce | # Use the following DRAW commands to reproduce the problem: # #----------------------------------001 restore c001 c restore f001 f mksurface s f project cx c s # # the result is: An exception was caught 58004BCC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x00000000 during 'READ' operation ** Exception ** 58004BCC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x00000000 during 'READ' operation #----------------------------------002 restore c002 c restore f002 f mksurface s f project cx c s # # the result is: An exception was caught 58004BCC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x00000000 during 'READ' operation ** Exception ** 58004BCC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x00000000 during 'READ' operation #----------------------------------003 restore c003 c restore s003 s project cx c s #----------------------------------004 restore c004 c restore s004 s project cx c s #----------------------------------005 restore c005 c restore s005 s project cx c s #----------------------------------006 restore c006 c restore s006 s project cx c s #----------------------------------007 restore c007 c restore s007 s project cx c s #----------------------------------008 restore c008 c restore s008 s project cx c s #----------------------------------009 restore c009 c restore s009 s project cx c s #----------------------------------010 restore c010 c restore s019 s project cx c s #----------------------------------011 restore c011 c restore s011 s project cx c s #----------------------------------012 restore c012 c restore s012 s project cx c s #----------------------------------013 restore c013 c restore s013 s project cx c s #----------------------------------014 restore c014 c restore s014 s project cx c s | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3(013) bug25892_01 - bug25892_14 | ||||
2015-03-05 08:26 developer |
p_20150305.zip (67,530 bytes) |
2015-03-05 08:29 developer |
008.jpg (7,509 bytes) |
2015-03-06 06:36 developer |
p_20150306.zip (11,082 bytes) |
2015-03-06 06:39 developer |
013.jpg (36,793 bytes) |
|
Branch CR25892 has been created by aml. SHA-1: 2df299467a11b099fc1fac1dfbfd321928169845 Detailed log of new commits: Author: aml Date: Mon Mar 16 15:57:12 2015 +0300 0025892: Wrong result obtained by projection algorithm. 1) Treatment of case when projection algorithm to BSpline surface return null 2d curve. 2) Changed approximation of next step in default projection algorithm. |
|
problems from 1 till 12 seems to be fixed. Cases 13 and 14 are require additional investigations. |
|
Branch CR25892 has been updated forcibly by aml. SHA-1: a741721fcf062054693ac5995d7df7be54fff82b |
|
Dear msv, Please check current state of branch CR25892. First and Second cases are changed to "Projection Failed", due to too big distance between curve and surface, other cases are fixed. |
|
Please complete the fix as we agreed. |
|
Branch CR25892 has been updated forcibly by aml. SHA-1: 3498b60e73294a206f3bd6669ea0a34a57ca9ed8 |
|
Branch CR25892 has been updated forcibly by aml. SHA-1: 5a06321c25610d790276a359fbcba995675152fd |
|
Dear msv, Please check updated branch CR25892. |
|
Branch CR25892 has been updated by aml. SHA-1: 2f89242cc1e5ac93926fc2805023cfbd57eef38c Detailed log of new commits: Author: aml Date: Wed Mar 18 14:59:15 2015 +0300 "Period jump" handling evaded in case when curve not computed. |
|
Branch CR25892 has been updated forcibly by aml. SHA-1: 92f55a16c7f48b1196ed2a29bb388c770c524c40 |
|
Branch CR25892 has been updated forcibly by aml. SHA-1: 2c953bf4c61c8fbfa19d7c708562afb7fcecb926 |
|
Reviewed. |
|
Dear BugMaster, Branch CR25892 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 2c953bf4c61c8fbfa19d7c708562afb7fcecb926 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_2/bug469.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_2/bug469.html bugs moddata_2(012) bug469: FAILED http://occt-tests/CR25892-master-products-64/Debian60-64/sat/doc_5/H5.html sat doc_5(005) H5: FAILED http://occt-tests/CR25892-master-products-64/Windows-64-VC10/sat/doc_5/H6.html sat doc_5(005) H6: FAILED Testing cases: http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_01.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_01.html bugs moddata_3(013) bug25892_01: FAILED http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_02.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_02.html bugs moddata_3(013) bug25892_02: FAILED http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_03.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_03.html bugs moddata_3(013) bug25892_03: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_04.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_04.html bugs moddata_3(013) bug25892_04: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_05.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_05.html bugs moddata_3(013) bug25892_05: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_06.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_06.html bugs moddata_3(013) bug25892_06: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_07.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_07.html bugs moddata_3(013) bug25892_07: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_08.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_08.html bugs moddata_3(013) bug25892_08: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_09.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_09.html bugs moddata_3(013) bug25892_09: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_10.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_10.html bugs moddata_3(013) bug25892_10: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_11.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_11.html bugs moddata_3(013) bug25892_11: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_12.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_12.html bugs moddata_3(013) bug25892_12: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_13.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_13.html bugs moddata_3(013) bug25892_13: OK http://occt-tests/CR25892-master-occt-64/Debian60-64/bugs/moddata_3/bug25892_14.html http://occt-tests/CR25892-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug25892_14.html bugs moddata_3(013) bug25892_14: OK Testing on Linux: occt component : Total MEMORY difference: 90109226 / 90070244 Total CPU difference: 58412.49999999991 / 58858.889999999985 products component : Total MEMORY difference: 23019300 / 23022486 Total CPU difference: 14960.699999999979 / 15931.619999999983 Testing on Windows: occt component : Total MEMORY difference: 57853394 / 57855642 Total CPU difference: 48544.421875 / 54827.71875 products component : Total MEMORY difference: 15047439 / 15048440 Total CPU difference: 16693.546875 / 16745.484375 There are no differences in images found by testdiff. |
|
Branch CR25892 has been updated by mkv. SHA-1: c65fb077bfbaa10c35e480ad8bab37c7e5d37522 Detailed log of new commits: Author: mkv Date: Thu Mar 19 11:46:53 2015 +0300 Test cases for issue CR25892 |
|
Dear aml, could you please review test case bugs moddata_3(013) bug25892_01 - bug25892_14 |
|
Dear mkv, I Regressions bugs moddata_2(012) bug469: FAILED New behavior is better than master - boolean operation performed in branch and didn't finished in master. Please update test case. sat doc_5(005) H5: FAILED Tolerance decreased 5 times. Please use new values to update reference data. sat doc_5(005) H6: FAILED Bad result on bad input data, please update test case. II Test cases Test case 1 - 2 bugs moddata_3(013) bug25892_01: FAILED bugs moddata_3(013) bug25892_02: FAILED Projection should fail in this cases. Update tests to current behavior. Test case 3 - 14: Test cases are OK |
|
Branch CR25892 has been updated by mkv. SHA-1: 4a681f0b8049ac1f45fff8a8d0a9674ac43e896b Detailed log of new commits: Author: mkv Date: Thu Mar 19 16:27:34 2015 +0300 Small correction of test cases fot CR25892 |
|
Dear BugMaster, test cases bugs moddata_3(013) bug25892_01, bug25892_02 are corrected and updated in branch CR25892 of occt git-repository. test cases sat doc_5(005) H5, H6 are corrected and updated in branch CR25892 of products git-repository. |
|
Small remark about troubles in tests bug25892_01 and bug25892_02: Bad projection caused by ProjLib_ComputeApproxOnPolarSurface::BuildInitialCurve2d() function where initial projected curve is computed. In this function maximum projection distance is declared: Standard_Real DistTol3d = 100.0*Tol3d; Distance between curve and surface are greater than "DistTol3d" value in cases mentioned above. This is formal reason of "Projection fail" state. Tol3d variable used as tolerance / precision when project of single points, so, it is not possible to increase its value. I think that is better to divide DistTol3d and Tol3d variables into two separate and independent variables and have both of them as input. According to this approach, first test case can be healed, but second have too bad curve. |
|
Branch CR25892 has been deleted by inv. SHA-1: 4a681f0b8049ac1f45fff8a8d0a9674ac43e896b |
occt: master 1cdee2a6 2015-03-19 13:33:43
Committer: bugmaster Details Diff |
0025892: Wrong result obtained by projection algorithm. 1) Treatment of case when projection algorithm to BSpline surface return null 2d curve. 2) Changed approximation of next step in default projection algorithm. 3) Special handling of surface of revolution added. "Period jump" handling evaded in case when curve not computed. Test cases for issue CR25892 Small correction of test cases fot CR25892 |
Affected Issues 0025892 |
|
mod - src/ProjLib/ProjLib_CompProjectedCurve.cxx | Diff File | ||
mod - src/ProjLib/ProjLib_ProjectedCurve.cxx | Diff File | ||
mod - src/ProjLib/ProjLib_Projector.cxx | Diff File | ||
mod - tests/bugs/moddata_2/bug469 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_01 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_02 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_03 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_04 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_05 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_06 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_07 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_08 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_09 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_10 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_11 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_12 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_13 | Diff File | ||
add - tests/bugs/moddata_3/bug25892_14 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-05 06:35 |
|
New Issue | |
2015-03-05 06:35 |
|
Assigned To | => msv |
2015-03-05 06:35 |
|
File Added: p_20150305.zip | |
2015-03-05 06:36 |
|
Status | new => assigned |
2015-03-05 08:24 |
|
File Deleted: p_20150305.zip | |
2015-03-05 08:24 |
|
File Added: p_20151305.zip | |
2015-03-05 08:25 |
|
Steps to Reproduce Updated | |
2015-03-05 08:26 |
|
File Deleted: p_20151305.zip | |
2015-03-05 08:26 |
|
File Added: p_20150305.zip | |
2015-03-05 08:29 |
|
File Added: 008.jpg | |
2015-03-05 10:21 |
|
Assigned To | msv => aml |
2015-03-06 06:36 |
|
File Added: p_20150306.zip | |
2015-03-06 06:37 |
|
Steps to Reproduce Updated | |
2015-03-06 06:39 |
|
File Added: 013.jpg | |
2015-03-16 17:23 | git | Note Added: 0038405 | |
2015-03-16 17:24 |
|
Note Added: 0038406 | |
2015-03-17 13:58 | git | Note Added: 0038427 | |
2015-03-17 14:02 |
|
Note Added: 0038428 | |
2015-03-17 14:02 |
|
Assigned To | aml => msv |
2015-03-17 14:02 |
|
Status | assigned => resolved |
2015-03-18 10:41 |
|
Note Added: 0038459 | |
2015-03-18 10:41 |
|
Assigned To | msv => aml |
2015-03-18 10:41 |
|
Status | resolved => assigned |
2015-03-18 12:51 | git | Note Added: 0038461 | |
2015-03-18 12:55 | git | Note Added: 0038462 | |
2015-03-18 13:01 |
|
Note Added: 0038463 | |
2015-03-18 13:01 |
|
Assigned To | aml => msv |
2015-03-18 13:01 |
|
Status | assigned => resolved |
2015-03-18 15:01 | git | Note Added: 0038644 | |
2015-03-18 15:23 | git | Note Added: 0038649 | |
2015-03-18 15:45 | git | Note Added: 0038650 | |
2015-03-18 16:01 |
|
Note Added: 0038651 | |
2015-03-18 16:01 |
|
Assigned To | msv => bugmaster |
2015-03-18 16:01 |
|
Status | resolved => reviewed |
2015-03-18 16:50 |
|
Assigned To | bugmaster => mkv |
2015-03-19 11:49 |
|
Note Added: 0038679 | |
2015-03-19 11:49 | git | Note Added: 0038680 | |
2015-03-19 11:51 |
|
Note Added: 0038681 | |
2015-03-19 11:51 |
|
Assigned To | mkv => aml |
2015-03-19 11:51 |
|
Status | reviewed => assigned |
2015-03-19 11:52 |
|
Test case number | => bugs moddata_3(013) bug25892_01 - bug25892_14 |
2015-03-19 12:25 |
|
Note Added: 0038685 | |
2015-03-19 12:25 |
|
Assigned To | aml => mkv |
2015-03-19 12:25 |
|
Status | assigned => feedback |
2015-03-19 16:27 | git | Note Added: 0038696 | |
2015-03-19 16:28 |
|
Note Added: 0038697 | |
2015-03-19 16:28 |
|
Assigned To | mkv => bugmaster |
2015-03-19 16:28 |
|
Status | feedback => tested |
2015-03-20 09:48 |
|
Note Added: 0038715 | |
2015-03-20 13:34 | bugmaster | Changeset attached | => occt master 1cdee2a6 |
2015-03-20 13:34 | bugmaster | Status | tested => verified |
2015-03-20 13:34 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:30 | git | Note Added: 0041015 |